fifth attempt at fixing the viewport issue with the background on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -20,8 +20,6 @@
 html,
 body {
   height: 100%;
-  overflow-x: hidden;
-  overscroll-behavior: none;
 }
 
 html {
